# ROS_federated_learning_implementation

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  bandit.yaml  compose.yaml  main.py  mkdocs.yml  pyproject.toml  run.sh  sitecustomize.py
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  docs.yml  release.yml  trivy.yml
ROS/: __init__.py
deploy/helm/fl-robots/: Chart.yaml  values.yaml
deploy/helm/fl-robots/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  networkpolicy.yaml  pdb.yaml  servicemonitor.yaml
deploy/k8s/: README.md  networkpolicy.yaml  standalone.yaml
docker/: Dockerfile  docker-compose.yaml  ros_entrypoint.sh
docs/: ARCHITECTURE.md  AUDIT.md  BENCHMARKS.md  DEVELOPMENT.md  OBSERVABILITY.md  RUNBOOK.md  SECURITY.md  SLO.md  grafana-dashboard.json  index.md  prometheus-rules.yml
docs/adr/: 0001-dual-mode-ros-shim.md  0002-json-string-fallback-protocol.md  0003-planner-pluggability.md  0004-lifecycle-vs-node.md  0005-standalone-csrf-strategy.md  0006-solver-caching-warm-start.md  0007-wsgi-gunicorn-serving.md
docs/api/: aggregator.md  mpc_qp.md  observability.md  robot_agent.md  simulation.md  standalone_web.md
fl_robots/: __init__.py
logs/: .gitkeep
models/: .gitkeep
results/: .gitkeep  baseline_ci.json
ros_web/: __init__.py  message_bus.py  models.py  mpc.py  simulation.py  web.py
ros_web/static/: dashboard.css  dashboard.js
ros_web/templates/: dashboard.html
scripts/: _fix_future.py  _fix_mypy.py  benchmark.py  compare.py  emit_env_manifest.py  run.sh  visualize.py
src/fl_robots/: __init__.py  package.xml  setup.cfg  setup.py
src/fl_robots/ROS/: __init__.py
src/fl_robots/config/: params.yaml
src/fl_robots/fl_robots/: __init__.py  aggregator.py  cli.py  controller.py  coordinator.py  digital_twin.py  message_bus.py  monitor.py  mpc.py  mpc_qp.py  persistence.py  results_artifacts.py  robot_agent.py  ros_compat.py  sim_models.py  simulation.py  standalone_web.py  web_dashboard.py  wsgi.py
src/fl_robots/fl_robots/data/: __init__.py  mnist_federated.py
src/fl_robots/fl_robots/localization/: __init__.py  predictor.py  tda.py
src/fl_robots/fl_robots/models/: __init__.py  simple_nn.py
src/fl_robots/fl_robots/observability/: __init__.py  logging.py  metrics.py  tracing.py
src/fl_robots/fl_robots/scripts/: __init__.py  benchmark.py
src/fl_robots/fl_robots/testing/: __init__.py  fake_ros.py
src/fl_robots/fl_robots/utils/: __init__.py  determinism.py  retry.py
src/fl_robots/fl_robots/web/: __init__.py
src/fl_robots/fl_robots/web/static/css/: dashboard.css  standalone.css
src/fl_robots/fl_robots/web/static/js/: dashboard.js  standalone.js
src/fl_robots/fl_robots/web/templates/: dashboard.html  standalone.html
src/fl_robots/launch/: fl_system.launch.py
src/fl_robots/resource/: fl_robots
src/fl_robots/test/: __init__.py  test_aggregator_launch.py
src/fl_robots_interfaces/: CMakeLists.txt  package.xml
src/fl_robots_interfaces/action/: TrainRound.action
src/fl_robots_interfaces/msg/: AggregationResult.msg  ModelWeights.msg  RobotStatus.msg  TrainingMetrics.msg
src/fl_robots_interfaces/srv/: GetModelInfo.srv  RegisterRobot.srv  TriggerAggregation.srv  UpdateHyperparameters.srv
tests/: conftest.py  test_aggregation.py  test_coverage_boost.py  test_e2e_command_flow.py  test_fedprox_benchmark.py  test_fedprox_runtime.py  test_history_endpoints.py  test_localization.py  test_mpc_observability.py  test_new_modules.py  test_production_endpoints.py  test_properties.py  test_ros_dashboard_security.py  test_ros_fake_env.py  test_ros_integration.py  test_security_headers.py  test_showcase_web.py  test_smoke_modules.py  test_web_and_qp.py
web/: README.md  package.json  playwright.config.ts
web/tests/: dashboard.spec.ts
