[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fl-robots"
version = "1.0.0"
description = "ROS2 Federated Learning Multi-Robot Coordination System"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Developer"}
]
keywords = ["ros2", "federated-learning", "robotics", "distributed-ml"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Robotics",
]

dependencies = [
    "pydantic>=2.0.0",
    "torch>=2.0.0,<=2.2.2",
    "numpy>=1.24.0,<2.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "flask-socketio>=5.3.0",
    "python-socketio>=5.0.0",
    "jinja2>=3.1.0",
    "eventlet>=0.33.0",
    "matplotlib>=3.7.0",
]

[project.scripts]
fl-robots = "fl_robots.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
]
viz = [
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
]

[project.urls]
"Homepage" = "https://github.com/rezami/ros-federated-learning"
"Bug Tracker" = "https://github.com/rezami/ros-federated-learning/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
pythonpath = ["src/fl_robots"]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
"" = "src/fl_robots"

[tool.setuptools.packages.find]
where = ["src/fl_robots"]

[tool.setuptools.package-data]
fl_robots = [
    "web/templates/*.html",
    "web/static/css/*.css",
    "web/static/js/*.js",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
mypy_path = "src/fl_robots"

[tool.pyright]
include = ["main.py", "src", "tests"]
extraPaths = ["src/fl_robots"]
