[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fl-robots"
version = "1.0.0"
description = "ROS2 Federated Learning Multi-Robot Coordination System"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Developer"}
]
keywords = ["ros2", "federated-learning", "robotics", "distributed-ml"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Robotics",
]

# Minimal runtime required for the standalone Flask dashboard and simulation.
# Heavier ML / ROS-dashboard deps live in the `ml` / `ros` extras so the
# lightweight Docker image stays small.
dependencies = [
    "pydantic>=2.0.0",
    "flask>=3.0.0",
    "gunicorn>=22.0.0",
    "jinja2>=3.1.0",
    "prometheus-client>=0.20.0",
    "structlog>=24.1.0",
]

[project.scripts]
fl-robots = "fl_robots.cli:main"
fl-robots-benchmark = "fl_robots.scripts.benchmark:main"

[project.optional-dependencies]
# Federated learning stack — needed for robot_agent / aggregator / tests.
ml = [
    "torch>=2.0.0,<=2.2.2",
    "torchvision>=0.15.0,<=0.17.2",
    "numpy>=1.24.0,<2.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
]
# Optional QP-based MPC solver.
qp = [
    "osqp>=0.6.5",
    "scipy>=1.10.0",
    "numpy>=1.24.0,<2.0",
]
# Full ROS2 web dashboard (Socket.IO + CORS + plotting).
ros = [
    "flask-cors>=4.0.0",
    "flask-socketio>=5.3.0",
    "python-socketio>=5.0.0",
    "eventlet>=0.33.0",
    "matplotlib>=3.7.0",
]
# Offline visualization / reporting helpers.
viz = [
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
]
# Optional OpenTelemetry tracing — instruments Flask + wraps aggregation /
# QP solve with spans. Off by default; enable at runtime with
# ``FL_ROBOTS_OTEL=1`` and set ``OTEL_EXPORTER_OTLP_ENDPOINT``.
otel = [
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-exporter-otlp-proto-http>=1.25.0",
    "opentelemetry-instrumentation-flask>=0.46b0",
]
dev = [
    "bandit>=1.7.9",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.100.0",
    "mutmut>=2.4.0",
    "schemathesis>=3.25.0",
    "ruff>=0.7.0",
    "mypy>=1.10.0",
    "pyright>=1.1.402",
    "types-requests",
]

[project.urls]
"Homepage" = "https://github.com/rezami/ros-federated-learning"
"Bug Tracker" = "https://github.com/rezami/ros-federated-learning/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
pythonpath = ["src/fl_robots"]
# Never discover the colcon/launch_testing ROS tests here — they import
# rclpy/launch_testing which aren't in the standalone dev environment.
norecursedirs = ["src/fl_robots/test", ".venv", ".hypothesis", ".mypy_cache"]

[tool.coverage.run]
source = ["fl_robots"]
omit = [
    # Web dashboard ships with the --extra ros profile; it requires
    # flask-socketio/eventlet which we don't install in the core CI matrix.
    "src/fl_robots/fl_robots/web_dashboard.py",
    # Module-level ROS benchmark script is exercised separately when the
    # full ROS2 toolchain is available; excluded from the core coverage gate.
    "src/fl_robots/fl_robots/scripts/benchmark.py",
    # Test-only support code.
    "src/fl_robots/fl_robots/testing/*",
]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "def __repr__",
    "pragma: no cover",
]
show_missing = true
skip_covered = false
# Minimum total coverage enforced in CI; ratchet up as we add tests.
fail_under = 75

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["src/fl_robots/fl_robots.egg-info", "src/fl_robots_interfaces", "dist", ".venv"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501",   # line-too-long (black/ruff-format handles it)
    "E741",   # Ambiguous variable name (math conventions, e.g. `l`)
    "B007",   # unused loop var (numeric loops use _ idiom inconsistently)
    "B008",   # function calls in defaults (FastAPI/Pydantic pattern)
    "B017",   # pytest.raises(Exception) is fine in property tests
    "B905",   # zip-without-strict (target-version supports it, but we prefer compat)
    "SIM102", # collapsible-if is less readable for nested checks
    "SIM105", # contextlib.suppress adds indentation — keep try/except
    "SIM108", # ternary preference
    "SIM117", # nested-with (combined context managers are busy)
    "SIM118", # dict.keys() is fine when explicit
    "UP007",  # keep Optional[X] (broader reader familiarity)
    "RUF001", "RUF002", "RUF003",  # intentional unicode in docstrings / comments
    "RUF005",
    "RUF013",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011", "SIM117", "F401", "F841", "E402", "RUF059"]
"src/fl_robots/fl_robots/ros_compat.py" = ["F401"]  # re-exports
"src/fl_robots/fl_robots/aggregator.py" = ["F401"]  # ROS/interface fallback imports
"src/fl_robots/fl_robots/robot_agent.py" = ["F401"]
"src/fl_robots/fl_robots/web_dashboard.py" = ["F401"]
"src/fl_robots/fl_robots/mpc_qp.py" = ["F401"]  # optional-dep soft import

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
"" = "src/fl_robots"

[tool.setuptools.packages.find]
where = ["src/fl_robots"]
include = ["fl_robots*"]
exclude = ["fl_robots_interfaces*", "launch*", "config*", "resource*", "test*"]

[tool.setuptools.package-data]
fl_robots = [
    "web/templates/*.html",
    "web/static/css/*.css",
    "web/static/js/*.js",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
mypy_path = "src/fl_robots"
exclude = [
    "src/fl_robots/fl_robots.egg-info",
    "src/fl_robots_interfaces",
    "dist",
    "build",
    ".venv",
]
# Strict mode: untyped defs and incomplete defs are now disallowed. The ROS
# bridge, Pydantic v2 (ConfigDict(slots=...)), and optional-dep stubs still
# have rough edges handled via targeted overrides below.
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
# Pydantic ConfigDict accepts slots=True at runtime but the TypedDict stub
# doesn't know; the ros_compat module intentionally rebinds names inside an
# except branch.
disable_error_code = ["typeddict-unknown-key", "no-redef"]

[[tool.mypy.overrides]]
module = [
    "torch.*",
    "torchvision.*",
    "numpy.*",
    "scipy.*",
    "flask_socketio.*",
    "osqp.*",
    "matplotlib.*",
    "rclpy.*",
    "std_msgs.*",
    "geometry_msgs.*",
    "rcl_interfaces.*",
    "fl_robots_interfaces.*",
    "prometheus_client.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "fl_robots.coordinator",
    "fl_robots.web_dashboard",
    "fl_robots.digital_twin",
    "fl_robots.monitor",
    "fl_robots.aggregator",
    "fl_robots.robot_agent",
    "fl_robots.standalone_web",
    "fl_robots.scripts.benchmark",
]
# These modules wrap untyped ROS stubs or bridge to third-party libraries
# (Flask, structlog, flask-socketio) whose typing is unreliable. We require
# return annotations but relax some strict checks.
disallow_untyped_defs = false
disallow_incomplete_defs = false
ignore_errors = false

[tool.pyright]
# CI-required scope: standalone/control modules available in the default dev
# environment. ROS-heavy modules still rely on mypy + runtime tests until the
# ros_compat surface is modeled more precisely for pyright.
include = [
    "src/fl_robots/fl_robots/models",
    "src/fl_robots/fl_robots/observability/logging.py",
    "src/fl_robots/fl_robots/observability/metrics.py",
    "src/fl_robots/fl_robots/mpc.py",
    "src/fl_robots/fl_robots/mpc_qp.py",
    "src/fl_robots/fl_robots/simulation.py",
    "src/fl_robots/fl_robots/standalone_web.py",
    "src/fl_robots/fl_robots/sim_models.py",
    "tests/test_mpc_observability.py",
    "tests/test_web_and_qp.py",
    "tests/test_aggregation.py",
    "tests/test_showcase_web.py",
]
extraPaths = ["src/fl_robots"]
