<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fl_robots</name>
  <version>1.0.0</version>
  <description>
    Federated Learning Multi-Robot Coordination System.
    Demonstrates distributed machine learning using ROS2 with multiple robot agents
    participating in federated averaging for collaborative model training.

    ROS2 Features: Topics, Services, Actions, Lifecycle Nodes, Parameters,
    QoS Profiles, Callback Groups, Multi-threaded Executors, Custom Interfaces.
  </description>
  <maintainer email="developer@fl-robots.local">Developer</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <!-- ROS2 Dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>action_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>rcl_interfaces</depend>

  <!-- Custom Interfaces Package -->
  <exec_depend>fl_robots_interfaces</exec_depend>

  <!-- Lifecycle -->
  <depend>lifecycle_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
